--- a/index.html
+++ b/index.html
@@ -1,73 +1,100 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <link rel="stylesheet" href="styles.css">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+
   <title>Frontend Mentor | Fylo landing page with two column layout</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
+    .attribution {
+      font-size: 11px;
+      text-align: center;
+    }
+
+    .attribution a {
+      color: hsl(228, 45%, 44%);
+    }
   </style>
 </head>
+
 <body>
+  <div class="page-wrapper">
+    <div class="grid-container">
+      <section class="header">
+        Features
+        Team
+        Sign In
+      </section>
 
-  Features
-  Team
-  Sign In
+      <section class="purpose col-one">
+        All your files in one secure location, accessible anywhere.
 
-  All your files in one secure location, accessible anywhere.
+        Fylo stores your most important files in one secure location.
+        Access them wherever you need, share and collaborate with friends,
+        family, and co-workers.
 
-  Fylo stores your most important files in one secure location. 
-  Access them wherever you need, share and collaborate with friends, 
-  family, and co-workers.
+        Get Started
+      </section>
+      <section class="purpose col-two">
+        purpose II
+      </section>
 
-  Get Started
+      <section class="benefit col-one">
+        Stay productive, wherever you are
 
-  Stay productive, wherever you are
+        Never let location be an issue when accessing your files. Fylo has you
+        covered for all of your file storage needs.
 
-  Never let location be an issue when accessing your files. Fylo has you 
-  covered for all of your file storage needs.
+        Securely share files and folders with friends, family and colleagues for
+        live collaboration. No email attachments required!
 
-  Securely share files and folders with friends, family and colleagues for 
-  live collaboration. No email attachments required!
+        See how Fylo works
 
-  See how Fylo works
+        Fylo has improved our team productivity by an order of magnitude. Since
+        making the switch our team has become a well-oiled collaboration machine.
 
-  Fylo has improved our team productivity by an order of magnitude. Since 
-  making the switch our team has become a well-oiled collaboration machine.
+        Kyle Burton
+        Founder & CEO, Huddle
+      </section>
+      <section class="benefit col-two">
+        benefit II
+      </section>
 
-  Kyle Burton
-  Founder & CEO, Huddle
+      <section class="action-call col-one">
+        Get early access today
 
-  Get early access today
+        It only takes a minute to sign up and our free starter tier is extremely generous.
+        If you have any questions, our support team would be happy to help you.
+      </section>
+      <section class="action-call col-two">
+        Get Started For Free
+      </section>
 
-  It only takes a minute to sign up and our free starter tier is extremely generous. 
-  If you have any questions, our support team would be happy to help you.
+      <footer class="footer">
+        Phone: +1-543-123-4567
+        example@fylo.com
 
-  Get Started For Free
+        About Us
+        Jobs
+        Press
+        Blog
 
-  Phone: +1-543-123-4567
-  example@fylo.com
+        Contact Us
+        Terms
+        Privacy
 
-  About Us
-  Jobs
-  Press
-  Blog
-
-  Contact Us
-  Terms
-  Privacy
-
-  <footer>
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
-    </p>
-  </footer>
+        <p class="attribution">
+          Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+          Coded by <a href="#">Your Name Here</a>.
+        </p>
+      </footer>
+    </div>
+  </div>
 </body>
+
 </html>
