--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
   <link rel="stylesheet" href="styles.css">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans|Raleway:400,700&display=swap" rel="stylesheet">
+
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
 
   <title>Frontend Mentor | Fylo landing page with two column layout</title>
@@ -23,9 +25,11 @@
 </head>
 
 <body>
-  <div class="page-wrapper">
-    <div class="grid-container">
-      <section class="header">
+
+  <div class="grid-container">
+
+    <!-- <img src="images/bg-curve-desktop.jpg" alt=""> -->
+    <!-- <section class="header">
         Features
         Team
         Sign In
@@ -42,29 +46,47 @@
       </section>
       <section class="purpose col-two">
         purpose II
+      </section> -->
+
+    <div class="container-grid">
+      <div class="curve-background-grid"></div>
+
+      <section class="benefit-left col-one">
+        <div class="companyMotto">
+          <h1>Stay productive, wherever you are</h1>
+          <div class="companyKeyPoints">
+            <p>
+              Never let location be an issue when accessing your files. Fylo has you
+              covered for all of your file storage needs.
+            </p>
+            <p>
+              Securely share files and folders with friends, family and colleagues for
+              live collaboration. No email attachments required!
+            </p>
+            <p>See how Fylo works</p>
+          </div>
+        </div>
+
+        <div class="testimonialBox">
+          <p>
+            Fylo has improved our team productivity by an order of magnitude. Since
+            making the switch our team has become a well-oiled collaboration machine.
+          </p>
+          <div class="pastCustomer">
+            <img src="/Volumes/Ele_Phant_Imprint_I/frontEndMentor/fylo-landing-page-with-two-column-layout-master/images/avatar-testimonial.jpg" alt="">
+            <p>Kyle Burton</p>
+            <p>Founder & CEO, Huddle</p>
+          </div>
+        </div>
       </section>
 
-      <section class="benefit col-one">
-        Stay productive, wherever you are
-
-        Never let location be an issue when accessing your files. Fylo has you
-        covered for all of your file storage needs.
-
-        Securely share files and folders with friends, family and colleagues for
-        live collaboration. No email attachments required!
-
-        See how Fylo works
-
-        Fylo has improved our team productivity by an order of magnitude. Since
-        making the switch our team has become a well-oiled collaboration machine.
-
-        Kyle Burton
-        Founder & CEO, Huddle
+      <section class="benefit-right col-two">
+        <img src="images/illustration-2.svg" alt="">
       </section>
-      <section class="benefit col-two">
-        benefit II
-      </section>
+    </div>
 
+  </div>
+  <!--
       <section class="action-call col-one">
         Get early access today
 
@@ -93,7 +115,7 @@
           Coded by <a href="#">Your Name Here</a>.
         </p>
       </footer>
-    </div>
+    </div> -->
   </div>
 </body>
 
