--- a/index.html
+++ b/index.html
@@ -55,20 +55,25 @@
         <div class="companyMotto">
           <h1>Stay productive, wherever you are</h1>
           <div class="companyKeyPoints">
-            <p>
+            <p class="companyKeyP">
               Never let location be an issue when accessing your files. Fylo has you
               covered for all of your file storage needs.
             </p>
-            <p>
+            <p class="companyKeyP">
               Securely share files and folders with friends, family and colleagues for
               live collaboration. No email attachments required!
             </p>
-            <p>See how Fylo works</p>
+            <div class="flyoTest">
+              <p>See how Fylo works</p>
+              <img src="/Volumes/Ele_Phant_Imprint_I/frontEndMentor/fylo-landing-page-with-two-column-layout-master/images/icon-arrow.svg" alt="">
+            </div>
+
           </div>
         </div>
 
         <div class="testimonialBox">
-          <p>
+          <img src="/Volumes/Ele_Phant_Imprint_I/frontEndMentor/fylo-landing-page-with-two-column-layout-master/images/icon-quotes.svg" alt="">
+          <p class="Testimonial">
             Fylo has improved our team productivity by an order of magnitude. Since
             making the switch our team has become a well-oiled collaboration machine.
           </p>
