--- a/index.html
+++ b/index.html
@@ -65,20 +65,20 @@
             </p>
             <div class="flyoTest">
               <p>See how Fylo works</p>
-              <img src="/Volumes/Ele_Phant_Imprint_I/frontEndMentor/fylo-landing-page-with-two-column-layout-master/images/icon-arrow.svg" alt="">
+              <img src="images/icon-arrow.svg" alt="">
             </div>
 
           </div>
         </div>
 
         <div class="testimonialBox">
-          <img src="/Volumes/Ele_Phant_Imprint_I/frontEndMentor/fylo-landing-page-with-two-column-layout-master/images/icon-quotes.svg" alt="">
+          <img src="images/icon-quotes.svg" alt="">
           <p class="Testimonial">
             Fylo has improved our team productivity by an order of magnitude. Since
             making the switch our team has become a well-oiled collaboration machine.
           </p>
           <div class="pastCustomer">
-            <img src="/Volumes/Ele_Phant_Imprint_I/frontEndMentor/fylo-landing-page-with-two-column-layout-master/images/avatar-testimonial.jpg" alt="">
+            <img src="images/avatar-testimonial.jpg" alt="">
             <p>Kyle Burton</p>
             <p>Founder & CEO, Huddle</p>
           </div>
